# sxt-proof-of-sql-sdk

./: .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  build.rs  ethereum-core-counts.json
.github/: pull_request_template.md
.github/workflows/: lint-and-test.yml  preview-release.yml  release.yml
chainlink/: README.md  fetch_accesstoken.js  fetch_commitments.js  get_wasm.js  request.js  run_verifier_chainlink.js
chainlink-functions/: .gitignore  README.md  package.json
chainlink-functions/example/: request.js  source.js
chainlink-functions/scripts/: append_base64_wasm.sh
chainlink-functions/smart-contract/: FunctionsConsumerAbi.json
chainlink-functions/source/: build_index.sh  index.js  index_tail.js  sxt_proof_of_sql_sdk_wasm_bg.wasm
crates/proof-of-sql-sdk/: Cargo.toml
crates/proof-of-sql-sdk-local/: Cargo.toml  README.md  build.rs
crates/proof-of-sql-sdk-local/proto/: prover.proto
crates/proof-of-sql-sdk-local/src/: attestation.rs  duration_serde.rs  lib.rs  prover_query.rs  substrate_query.rs  sxt_chain_runtime.rs  uppercase_accessor.rs  verify.rs
crates/proof-of-sql-sdk-wasm/: Cargo.toml  README.md
crates/proof-of-sql-sdk-wasm/.cargo/: config.toml
crates/proof-of-sql-sdk-wasm/pkg/: sxt_proof_of_sql_sdk_wasm.js  sxt_proof_of_sql_sdk_wasm_bg.wasm  sxt_proof_of_sql_sdk_wasm_bg.wasm.part.aa  sxt_proof_of_sql_sdk_wasm_bg.wasm.part.ab
crates/proof-of-sql-sdk-wasm/src/: lib.rs
crates/proof-of-sql-sdk/examples/cli/: args.rs  main.rs
crates/proof-of-sql-sdk/examples/count-ethereum-core/: main.rs
crates/proof-of-sql-sdk/proto/: prover-messages.proto  prover.proto
crates/proof-of-sql-sdk/src/: README.md  client.rs  lib.rs  prover_query.rs  substrate.rs  verify.rs
examples/chainlink/: README.md  package.json  request.js  source.js
examples/cli/: args.rs
examples/deno/: README.md  query.js
examples/node/: README.md  package.json  query.js
node/: package.json
node/src/: build_index.sh  index_tail.js  package.json
proto/: ingest.proto  prover.proto
scripts/count-ethereum-core/: Cargo.toml
scripts/count-ethereum-core/src/: main.rs
sdk/: Cargo.toml
sdk/src/: args.rs  auth.rs  client.rs  lib.rs  main.rs  substrate.rs
src/: args.rs  auth.rs  client.rs  lib.rs  main.rs  substrate.rs  sxt_chain_runtime.rs
tests/: count-ethereum-core.rs
