[workspace]
resolver = "2"
members = ["crates/proof-of-sql-sdk-local", "crates/proof-of-sql-sdk-wasm", "crates/proof-of-sql-sdk/"]
# the wasm and sdk crates enable mutually exclusive features on subxt
# this default avoids the compilation issue for typical development
default-members = [ "crates/proof-of-sql-sdk-local", "crates/proof-of-sql-sdk"]

[workspace.package]
edition = "2021"
repository = "https://github.com/spaceandtimelabs/sxt-proof-of-sql-sdk"
version = "0.1.0"
license-file = "LICENSE"

[workspace.dependencies]
ark-serialize = { version = "0.5.0", default-features = false }
clap = { version = "4.5.20", features = ["derive", "env"] }
dotenv = "0.15"
env_logger = "0.11.5"
flexbuffers = { version = "2.0.0" }
futures = { version = "0.3.31"}
gloo-utils = { version = "0.2.0" }
hex = { version = "0.4.3", default-features = false }
lazy_static = { version = "1.5.0" }
log = "0.4.22"
indexmap = "2.6.0"
parity-scale-codec = { version = "3.7.0", default-features = false }
postcard = { version = "1.0.10", default-features = false }
proof-of-sql = { version = "0.44.4", default-features = false }
proof-of-sql-parser = { version = "0.44.4", default-features = false }
prost = "0.12"
prost-build = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
snafu = { version = "0.8.5", default-features = false }
subxt = { version = "0.37.0", default-features = false }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sxt-proof-of-sql-sdk-local = { path = "crates/proof-of-sql-sdk-local", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.11", default-features = false }
tonic-build = { version = "0.11" }
wasm-bindgen = { version = "0.2.95" }
