[workspace]
resolver = "2"
members = ["crates/proof-of-sql-sdk-local", "crates/proof-of-sql-sdk-wasm", "crates/proof-of-sql-sdk/"]
# the wasm and sdk crates enable mutually exclusive features on subxt
# this default avoids the compilation issue for typical development
default-members = [ "crates/proof-of-sql-sdk-local", "crates/proof-of-sql-sdk"]

[workspace.package]
edition = "2021"
repository = "https://github.com/spaceandtimelabs/sxt-proof-of-sql-sdk"
version = "0.1.0"
license-file = "LICENSE"

[workspace.dependencies]
ark-serialize = { version = "0.5.0", default-features = false }
bincode = { version = "2.0.1", default-features = false }
chrono="0.4.39"
clap = { version = "4.5.20", features = ["derive", "env"] }
datafusion = { version = "38.0.0", default-features = false }
dotenv = "0.15"
env_logger = "0.11.5"
futures = { version = "0.3.31"}
gloo-utils = { version = "0.2.0" }
hex = { version = "0.4.3", default-features = false }
lazy_static = { version = "1.5.0" }
log = "0.4.22"
indexmap = "2.8.0"
parity-scale-codec = { version = "3.7.0", default-features = false }
proof-of-sql = { version = "0.99.0", default-features = false }
proof-of-sql-planner = { version = "0.99.0", default-features = false }
prost = "0.12"
prost-build = "0.12"
prost-types = "0.12"
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
snafu = { version = "0.8.5", default-features = false }
subxt = { version = "0.37.0", default-features = false }
sp-crypto-hashing = { version = "0.1.0", default-features = false }
sqlparser = { version = "0.45.0", default-features = false }
sxt-proof-of-sql-sdk-local = { path = "crates/proof-of-sql-sdk-local", default-features = false }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.11", default-features = false }
tonic-build = { version = "0.11" }
wasm-bindgen = { version = "0.2.95" }
k256 = { version = "0.13.4" }
sha3 = { version = "0.10.8" }
sp-core = "34.0.0"
itertools = "0.13.0"
