[package]
name = "sxt-proof-of-sql-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-serialize.workspace = true 
clap.workspace = true 
dotenv.workspace = true 
flexbuffers.workspace = true 
futures.workspace = true 
postcard.workspace = true 
proof-of-sql-parser.workspace = true 
prost.workspace = true 
reqwest.workspace = true 
serde.workspace = true 
serde_json.workspace = true 
subxt.workspace = true 
tokio.workspace = true 
tonic.workspace = true 
proof-of-sql.workspace = true 


[build-dependencies]
prost-build = "0.12"
tonic-build = { version = "0.11" }
