[package]
name = "sxt-proof-of-sql-sdk-local"
edition.workspace = true
repository.workspace = true
version.workspace = true
license-file.workspace = true

[dependencies]
bincode = { workspace = true, default-features = false, features = ["serde", "alloc"] }
proof-of-sql = { workspace = true }
proof-of-sql-parser = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true, features = ["codegen", "prost"] }
serde = { workspace = true }
snafu = { workspace = true }
sqlparser = { workspace = true }
subxt = { workspace = true }
k256 = { workspace = true }
sha3 = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }

[features]
default = ["native", "prover-client"]
prover-client = ["tonic/transport"]
native = ["subxt/native"]
web = ["subxt/web"]
