[package]
name = "sxt-proof-of-sql-sdk-wasm"
edition.workspace = true
repository.workspace = true
version.workspace = true
license-file.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
ark-serialize = { workspace = true }
bincode = { workspace = true, default-features = false, features = ["serde"] }
gloo-utils = { workspace = true }
hex = { workspace = true, features = ["serde"] }
lazy_static = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
proof-of-sql = { workspace = true }
proof-of-sql-parser = { workspace = true }
serde = { workspace = true }
subxt = { workspace = true }
sp-crypto-hashing = { workspace = true }
sxt-proof-of-sql-sdk-local = { workspace = true, features = ["web"] }
wasm-bindgen = { workspace = true }

[lints.rust]
# Let the compiler know about this 'cfg(...)' so it won't complain
unexpected_cfgs = { level = "allow", names = ["wasm_bindgen_unstable_test_coverage"] }
