[package]
name = "count-ethereum-core"
version = "0.1.0"
edition = "2021"

[dependencies]
clap.workspace = true
dotenv.workspace = true
env_logger.workspace = true
log.workspace = true
futures.workspace = true
indexmap.workspace = true
proof-of-sql.workspace = true
serde_json.workspace = true
sxt-proof-of-sql-sdk.workspace = true
tokio.workspace = true
